@@ -96,7 +96,7 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-30 14:07:04 L.92 '35576 T827036850 .K ~856 +----+----+----+----+----+
+     Zndex_E : //z 2015-09-30 14:36:47 L.92 '33793 T830558811 .K ~858 +----+----+----+----+----+
      TimeCnt : //z 2015-09-30 14:05:43 L.92 '35657 T826965107 .K ~46  +----+----+----+----+----+
      Reg.Cnt : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33  +----+----+----+----+----+
      #33  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33    V+.865  L+.924  
@@ -136,7 +136,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-30 14:07:04 L.92 '35576 T827036850 .K ~889   R+.33   L+.945  --+----+
+     Version : //z 2015-09-30 14:36:47 L.92 '33793 T830558811 .K ~891   R+.28   L+.813  --+----+
      #46  V+ : //z 2015-09-30 11:05:33 L.92 '46467 T1247528463.K ~874   R+.33   L+.931  
      #45  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~865   R+.33   L+.925  V+.865  
      #45  V+ : //z 2015-09-29 17:35:28 L.93 '23072 T3077693668.K ~855   R+.32   L+.916  
@@ -809,8 +809,7 @@ http://www.overclock.net/t/1292832/directx-9-tutorials-1-initializing-directx-9-
 http://ftp.train2game.com/showthread.php/20147-Useful-Link-For-DirectX-9-Tutorial-VERY-IN-DEPTH-)
 
 //z 2015-09-05 20:38:27 L.117'12093 T1845101210.K[T31,L790,R28,V751]
-2015-09-05 20:38 todo 把npp plugins intel slotion 给去掉。
-
+2015-09-05 20:38 todo 把npp plugins intel slotion 给去掉。 done
 一些game相关的代码
 https://github.com/bagobor?tab=repositories
 
