@@ -3734,3 +3734,15 @@ Changes to be committed:
 	new file:   "Doc/Math/\347\220\206\350\247\243\347\237\251\351\230\265.txt"
 	modified:   History.txt
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/09/30.14_39_39.69.K.MzM.T@WS 
+On branch master
+Your branch is ahead of 'origin/master' by 1 commit.
+  (use "git push" to publish your local commits)
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
